程序员B修改了index.html文件

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h3>Review git and github</h3>
-    <p>我是程序员B添加的内容</p>
+    <p>我是程序员B添加的内容 程序员B做出的修改</p>
     <p>我是程序员B再次添加的内容</p>
 </body>
 
