--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>我是程序员B添加的内容 程序员B做出的修改</p>
     <p>我是程序员B添加的内容 程序员A做出的修改</p>
     <p>我是程序员B再次添加的内容</p>
+    <p>我是程序员C添加的内容</p>
 </body>
 
 </html>
